# mini-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json
examples/: 2-config.json  3-config.json  recover.sh  script.py
final/: check.cmd  colors.h  compile.cmd  debug.cmd  drawer.h  graphics.cpp  graphics.h  main.cpp  matrix.h  model.cpp  model.h  run.cmd  vec.cpp  vec.h
include/graphics/: canvas.h  fragment.h  geometrics.h  graphics.h  icanvas.h  iviewport.h  rasterizer.h  texture.h
include/linal/: matrix.h  matrix.tpp  vec.h  vec.tpp
include/mini-renderer/: graphics.h
include/mini-renderer/linal/: matrix.h  matrix.tpp  vec.h  vec.tpp
include/mini-renderer/model/: image.h  image.tpp  model.h  rgb.h
include/model/: image.h  image.tpp  model.h  rgb.h  texture.h
old/lecture 1/: main.cpp  script.cmd
old/lecture 2/: Model.cpp  Vec.cpp  Vec.h  compile.cmd  main.cpp  output.tga  output1.tga  run.cmd
old/lecture 3/: Model.h  Vec.cpp  debug.cmd  main.cpp  output.tga  output1.tga  output2.tga  run1.cmd  run2.cmd  speed.cmd
old/lecture 4.2/: Matrix.h  Model.cpp  TXLib.h  Vec.cpp  Vec.h  main.cpp  speed.cmd  triangle.cpp  triangle.h
src/: geometrics.cpp  graphics.cpp  main.cpp  model.cpp  model_overview.cpp
src/graphics/: canvas.cpp  geometrics.cpp  graphics.cpp  rasterizer_factory.cpp
src/graphics/rasterizers/: binary_gouraud.cpp  binary_phong.cpp  texture.cpp  texture_gouraud.cpp  texture_phong.cpp
src/model/: texture.cpp
src/rasterizer/: binary.cpp  binary_gouraud.cpp  binary_phong.cpp  fill.cpp  texture.cpp  texture_gouraud.cpp  texture_phong.cpp
src/rasterizers/: binary.cpp  binary_gouraud.cpp  binary_phong.cpp  fill.cpp
tests/: randf.h  test_graphics.cpp  test_model.cpp
tests/linal/: test_matrix.cpp  test_vec.cpp
